<resources>
    <string name="app_name">Трекер привычек</string>
    <string name="fab_content_description">Добавить привычку</string>
    <string name="toolbar_add_habit_activity">Добавление привычки</string>
    <string name="toolbar_edit_habit_activity">Редактирование привычки</string>
    <string name="empty_habits">Вы пока не добавили ни одну привычку</string>
    <string name="edit_hint_habit_title">Название привычки</string>
    <string name="edit_hint_habit_description">Описание привычки</string>
    <string name="label_spinner_habit_priority">Приоретет привычки:</string>
    <string name="habit_priority_hint">Приоритет привычки</string>
    <string name="habit_priority_low">Низкий</string>
    <string name="habit_priority_neutral">Средний</string>
    <string name="habit_priority_high">Высокий</string>
    <string name="label_radio_group_habit_type">Тип привычки:</string>
    <string name="habit_type_bad">Вредная</string>
    <string name="habit_type_neutral">Нейтральная</string>
    <string name="habit_type_good">Хорошая</string>
    <string name="habit_color_picker_label">Цвет карточки с привычкой</string>
    <string name="habit_color_picker_chosen_color_text">Выбранный цвет</string>
    <string name="edit_hint_habit_count_complete">Количество выполнений привычки</string>
    <string name="btn_pick_habit_period">Выбрать дату окончания выполнений</string>
    <string name="btn_add_habit">Добавить привычку</string>
    <string name="btn_edit_habit">Отредактировать привычку</string>
    <string name="toast_fail_add_habit">Не все поля заполнены или заполнены неправильно</string>
    <string name="error_field_empty">Данное поле не может быть пустым</string>
    <string name="error_field_not_number">Не похоже на число</string>
    <string name="btn_show_color_picker">Выбрать цвет карточки с привычкой</string>
    <string name="btn_confirm_chosen_color">Подтвердить выбор</string>

    <string name="habit_card_priority">Приоритет: %s</string>
    <string name="habit_card_type">Тип: %s</string>
    <string name="habit_card_count_complete">Количество выполнения: %s</string>
    <string name="habit_card_period">Количество повторений в день: %s</string>
    <string name="habit_card_btn_submit">Выполнено</string>

    <string name="habit_bad_can_complete">Можете выполний еще раз: %s</string>
    <string name="habit_bad_cannot_complete">Хватит "%s"</string>
    <string name="habit_good_can_complete">Стоит выполнить еще раз: %s</string>
    <string name="habit_good_cannot_complete">You are breathtaking!</string>

    <string-array name="habit_colors">
        <item>yellow</item>
        <item>gold</item>
        <item>peach</item>
        <item>dull_pink</item>
        <item>purple</item>
        <item>dull_blue</item>
        <item>light_blue</item>
        <item>bright_green</item>
        <item>light_green</item>
        <item>grey_orange</item>
        <item>dull_emerald</item>
        <item>light_purple</item>
        <item>marsh</item>
        <item>dull_red</item>
        <item>blue</item>
        <item>dull_green</item>
    </string-array>

    <string name="menu_item_home">Домашний экран</string>
    <string name="menu_item_app_info">Информация о приложении</string>
    <string name="open_drawer_content">Navigation opened</string>
    <string name="close_drawer_content">Navigation closed</string>

    <string-array name="tab_names">
        <item>Хорошие привычки</item>
        <item>Вредные привычки</item>
    </string-array>

    <string name="nav_home_label">Трекер привычек</string>
    <string name="nav_add_habit">Добавить привычку</string>
    <string name="nav_app_info_label">Информация о приложении</string>

    <string name="app_description">
        "Трекер привычек" поможет вам завести и поддерживать полезные привычки,
        позволяя достичь долгосрочных целей. Также вы можете добавить свои вредные привычки,
        а приложение поможет вам помнить о них и избавляться.
    </string>
    <string name="version">Версия: %s</string>

    <string name="main_toolbar_search_title">Поиск</string>
    <string name="search_empty">Ни одна привычка по такому запросу не была найдена</string>
    <string name="search_bottom_sheet_header">Фильтры и сортировки</string>
    <string name="search_bottom_sheet_btn_sort">Сортировать по приоритету</string>
    <string name="search_bottom_sheet_edit_search_title">Название привычки</string>

    <string name="nav_header_desc">Avatar</string>
</resources>