<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation"
            app:startDestination="@id/nav_home">
    <fragment
            android:id="@+id/nav_home"
            android:name="com.doubletapp.habittracker.fragments.HomeFragment"
            android:label="@string/nav_home_label"
            tools:layout="@layout/fragment_home"/>
    <fragment
            android:id="@+id/nav_add_habit"
            android:name="com.doubletapp.habittracker.fragments.AddHabitFragment"
            android:label="@string/nav_add_habit"
            tools:layout="@layout/fragment_add_habit"/>
    <fragment
            android:id="@+id/nav_app_info"
            android:name="com.doubletapp.habittracker.fragments.AppInfoFragment"
            android:label="@string/nav_app_info_label"
            tools:layout="@layout/fragment_app_info"/>
</navigation>