<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SearchHabitFragment">
    <TextView
            android:id="@+id/text_empty_habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_header"
            android:text="@string/search_empty"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searched_habit_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
                android:id="@+id/bottom_sheet_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/bottomSheetStyle"
                android:background="@color/grey"
                android:orientation="vertical"
                app:behavior_hideable="false"
                app:behavior_peekHeight="30dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_bottom_sheet_header"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_header"
                    android:layout_gravity="center_horizontal"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sort_habits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_bottom_sheet_btn_sort"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_search_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_bottom_sheet_edit_search_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_search_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>