<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddHabitActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_habit_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint_habit_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_habit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_habit_description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/edit_hint_habit_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:layout_constraintTop_toBottomOf="@id/edit_habit_title_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_habit_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_habit_priority_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/habit_priority_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/edit_habit_description_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <AutoCompleteTextView
                        android:id="@+id/edit_habit_priority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/habit_type_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_radio_group_habit_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_habit_priority_layout"
                    app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                    android:id="@+id/habit_type_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@id/habit_type_header"
                    app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/habit_type_radio_bad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_type_bad"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/habit_type_radio_neutral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_type_neutral"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/habit_type_radio_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_type_good"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_habit_count_complete_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint_habit_count_complete"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:layout_constraintTop_toBottomOf="@id/habit_type_radio_group"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_habit_count_complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_habit_period_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint_habit_period"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:layout_constraintTop_toBottomOf="@id/edit_habit_count_complete_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_habit_period"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/habit_color_picker_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"
                    android:text="@string/habit_color_picker_label"
                    app:layout_constraintTop_toBottomOf="@id/edit_habit_period_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <HorizontalScrollView
                    android:id="@+id/habit_color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/habit_color_picker_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout
                        android:id="@+id/habit_color_picker_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>
            </HorizontalScrollView>

            <TextView
                    android:id="@+id/habit_chosen_color_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:text="@string/habit_color_picker_chosen_color_text"
                    app:layout_constraintTop_toBottomOf="@id/habit_color_picker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/habit_chosen_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/habit_chosen_color_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/habit_chosen_color_rgb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/habit_chosen_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/habit_chosen_color_hsv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/habit_chosen_color_rgb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_habit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_habit"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/habit_chosen_color_hsv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>