<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.ColorPickerFragment"
              android:orientation="vertical"
              android:paddingTop="10dp"
              android:paddingBottom="20dp">

    <TextView
            android:id="@+id/habit_color_picker_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_header"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:text="@string/habit_color_picker_label"/>

    <HorizontalScrollView
            android:id="@+id/habit_color_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <LinearLayout
                android:id="@+id/habit_color_picker_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>
    </HorizontalScrollView>

    <TextView
            android:id="@+id/habit_chosen_color_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@string/habit_color_picker_chosen_color_text"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/habit_chosen_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/habit_chosen_color_rgb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/habit_chosen_color_hsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_confirm_chosen_color"/>

</LinearLayout>